okd/gateway/components/gateway/external/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway-external
  namespace: openshift-ingress
  labels:
    gateway.networking.k8s.io/gateway-name: https-gateway-external
spec:
  gatewayClassName: openshift-default
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          gateway-tenancy: external
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "arthurvardevanyan.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: arthurvardevanyan-com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: arthurvardevanyan-com-cert
    - name: https-www
      protocol: HTTPS
      port: 443
      hostname: "www.arthurvardevanyan.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: arthurvardevanyan-com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: arthurvardevanyan-com-cert
    - name: spotify
      protocol: HTTPS
      port: 443
      hostname: "analytics-for-spotify.arthurvardevanyan.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify-ext
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: spotify-cert
    - name: pr-agent
      protocol: HTTPS
      port: 443
      hostname: "pr-agent.arthurvardevanyan.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: pr-agent
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: pr-agent-cert
  infrastructure:
    labels:
      coraza: external-ruleset
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gw-options-external
