okd/gateway/components/gateway/external/authorization-policy.yaml
##########################################################################
### https://unifi.arthurvardevanyan.com/network/default/settings/zones ###
##########################################################################
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: https-gateway-external-cloudflare
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              # Cloudflare IPs
              - 173.245.48.0/20
              - 103.21.244.0/22
              - 103.22.200.0/22
              - 103.31.4.0/22
              - 141.101.64.0/18
              - 108.162.192.0/18
              - 190.93.240.0/20
              - 188.114.96.0/20
              - 197.234.240.0/22
              - 198.41.128.0/17
              - 162.158.0.0/15
              - 104.16.0.0/13
              - 104.24.0.0/14
              - 172.64.0.0/13
              - 131.0.72.0/22
              # Local Network
              - 10.0.0.0/7
      to:
        - operation:
            hosts:
              - "www.arthurvardevanyan.com"
              - "arthurvardevanyan.com"
              - "analytics-for-spotify.arthurvardevanyan.com"
              - "pr-agent.arthurvardevanyan.com"
