okd/gateway/components/gateway/external/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-external
  namespace: openshift-ingress
spec:
  policyTypes:
    # - Ingress
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic-external
  namespace: openshift-ingress
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-istiod
  namespace: openshift-ingress
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - port: 15012
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-external
  namespace: openshift-ingress
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-app
  namespace: openshift-ingress
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: arthurvardevanyan-com
          podSelector:
            matchLabels:
              app: arthurvardevanyan
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify-ext
          podSelector:
            matchLabels:
              app: analytics-for-spotify
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-coraza-cache
  namespace: openshift-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coraza-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coraza-kubernetes-operator
      ports:
        - protocol: TCP
          port: 18080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-internal-gateway
  namespace: openshift-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: https-gateway
      ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-loki
  namespace: openshift-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
          podSelector:
            matchLabels:
              app: loki
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-victoria-logs
  namespace: openshift-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress-logs
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-logs
              app.kubernetes.io/name: vlinsert
      ports:
        - protocol: TCP
          port: 9481
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-microshift
  namespace: openshift-ingress
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.7/32
      ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-pr-agent
  namespace: openshift-ingress
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: https-gateway-external
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pr-agent
          podSelector:
            matchLabels:
              app: pr-agent
      ports:
        - protocol: TCP
          port: 3000
